# currantOS

./: .diary.md.un~  .readme.md.un~  readme.md
proj_root/: .readme.md.un~  .rpi2.cmake.un~  rpi2.cmake
proj_root/build-cmake/: .clean.sh.un~  .currantOS.disasm.un~  .gen_make.sh.un~  CMakeCache.txt  Makefile  clean.sh  cmake_install.cmake  currantOS  currantOS.cbp  currantOS.disasm  gen_make.sh
proj_root/build-cmd/: build-rpi-2.sh
proj_root/src/: .CMakeLists.txt.un~  .test.un~  CMakeLists.txt  tags
proj_root/src/init/: .cstartup.c.un~  .start.S.un~  cstartup.c  start.S
proj_root/src/lib/: cstubs.c
proj_root/src/linker_script/: rpi.x
proj_root/src/main/: .arm_timer.c.un~  .arm_timer.h.un~  .aux.c.un~  .aux.h.un~  .base.h.un~  .console.c.un~  .console.h.un~  .gpio.c.un~  .gpio.h.un~  .interrupts.c.un~  .interrupts.h.un~  .led.c.un~  .led.h.un~  .main.c.un~  .main.un~  .serial.c.un~  .serial.h.un~  .timer.c.un~  .timer.h.un~  .type.h.un~  arm_timer.c  arm_timer.h  aux.c  aux.h  base.h  console.c  console.h  gpio.c  gpio.h  interrupts.c  interrupts.h  led.h  main.c  serial.c  serial.h  timer.c  timer.h  type.h
